# laser_challenge_simulation

./: CMakeLists.txt  Dockerfile  README.md  RUNDOCKER.md  docker-compose.yml  package.xml  update.sh
install/laser_challenge_simulation/share/laser_challenge_simulation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/laser_challenge_simulation/share/laser_challenge_simulation/cmake/: laser_challenge_simulationConfig-version.cmake  laser_challenge_simulationConfig.cmake
install/laser_challenge_simulation/share/laser_challenge_simulation/config/: taura_mavros_params.yaml
install/laser_challenge_simulation/share/laser_challenge_simulation/environment/: ament_prefix_path.dsv  path.dsv
install/laser_challenge_simulation/share/laser_challenge_simulation/launch/: challenge.launch.py  challenge_world.launch  challenge_world_.launch  drone_launch.py  height_estimator_test.launch  vision_world.launch
install/laser_challenge_simulation/share/laser_challenge_simulation/models/arena_spawn/: model.config  model.sdf
install/laser_challenge_simulation/share/laser_challenge_simulation/models/banner/: model.config  model.sdf
install/laser_challenge_simulation/share/laser_challenge_simulation/models/banner_2/: model.config  model.sdf
install/laser_challenge_simulation/share/laser_challenge_simulation/models/barcode_shelf/: model.config  model.sdf
install/laser_challenge_simulation/share/laser_challenge_simulation/models/box_A0/: model.config  model.sdf
install/laser_challenge_simulation/share/laser_challenge_simulation/models/box_A1/: model.config  model.sdf
install/laser_challenge_simulation/share/laser_challenge_simulation/models/box_A2/: model.config  model.sdf
install/laser_challenge_simulation/share/laser_challenge_simulation/models/box_A3/: model.config  model.sdf
install/laser_challenge_simulation/share/laser_challenge_simulation/models/box_B0/: model.config  model.sdf
install/laser_challenge_simulation/share/laser_challenge_simulation/models/box_B1/: model.config  model.sdf
install/laser_challenge_simulation/share/laser_challenge_simulation/models/box_B2/: model.config  model.sdf
install/laser_challenge_simulation/share/laser_challenge_simulation/models/box_B3/: model.config  model.sdf
install/laser_challenge_simulation/share/laser_challenge_simulation/models/box_C0/: model.config  model.sdf
install/laser_challenge_simulation/share/laser_challenge_simulation/models/box_C1/: model.config  model.sdf
install/laser_challenge_simulation/share/laser_challenge_simulation/models/box_C2/: model.config  model.sdf
install/laser_challenge_simulation/share/laser_challenge_simulation/models/box_C3/: model.config  model.sdf
install/laser_challenge_simulation/share/laser_challenge_simulation/models/box_D0/: model.sdf  (+1 more)
install/laser_challenge_simulation/share/laser_challenge_simulation/scripts/: asyncio  automated_takeoff.py  base_spawner.py  run_docker.sh
install/laser_challenge_simulation/share/laser_challenge_simulation/worlds/: stage_five.world  stage_four.world  stage_one.world  stage_three.world  stage_two.world  stage_vision.world  vision_ia.world
(+146 files in other folders)
