<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>laser_challenge_simulation</name>
  <version>1.0.1</version>
  <description>drone trials league sandbox pack ported to ROS 2</description>
  <maintainer email="avfs@academico.ufpb.br">Augusto Vinicius F de sales</maintainer>
  <maintainer email="wagnergarcia@cc.ci.ufpb.br">Wagner D Garcia</maintainer>
  <license>apache_license_2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_python</depend>

  <export>
    <build_type>ament_cmake</build_type>
    </export>
</package>